<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_colour"
    android:orientation="vertical">

    <TextView
        android:id="@+id/introduction_message_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/inter_extrabold"
        android:text="@string/introduction_message_1"
        android:textColor="@color/secondary_colour"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/introduction_message_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/introduction_message_2"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/introduction_message_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/introduction_message_3"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/introduction_message_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/introduction_message_4"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_introduction"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/button_curved_corners"
        android:text="@string/introduction_button_1"
        android:textAllCaps="true"
        android:fontFamily="@font/inter_regular"
        android:letterSpacing="0.1"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:onClick="onClickIntroductionBtnOneListener"
        />

</LinearLayout>
